--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -16,7 +16,6 @@ jobs:
           node-version: 18
       - run: npm install # or yarn install
       - uses: sibiraj-s/action-eslint@v3
-        with:
-          eslint-args: '--ignore-path=.gitignore --quiet'
-          extensions: 'js,jsx,ts,tsx'
-          annotations: true
+
+      - run:  npm run lint # or yarn install
+      - uses: sibiraj-s/action-eslint@v3
