--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -1,15 +1,21 @@
 name: Lint
 
 on: 
-  [push, pull] :
-  branches: [ main ]
+   pull_request:
+   push:
+    branches:
+      - main
 
 jobs:
   eslint:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v1
+      - uses: actions/setup-node@v4
+        with:
+          node-version: 18
       - name: Install modules
         run: npm install
       - name: Run ESLint
         run: npm run lint
+
